--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-firebase/app": "20.4.0",
-    "@react-navigation/native": "6.1.18",
-    "@react-navigation/native-stack": "6.11.0",
-    "@react-navigation/stack": "6.4.1",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/core": "^6.4.17",
+    "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "2.2.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "^12.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -35,17 +36,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-linear-gradient": "2.8.3",
-    "react-native-radial-gradient": "1.1.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.9",
-    "react-native-screens": "3.34.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-text-gradient": "^0.1.7",
     "react-native-web": "~0.19.10",
-    "react-redux": "9.1.2"
+    "react-redux": "9.1.2",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
+    "@babel/generator": "^7.25.5",
+    "@babel/runtime": "^7.25.4",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
