--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "2.2.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
+    "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
     "expo-font": "^12.0.9",
     "expo-linear-gradient": "~13.0.2",
@@ -38,9 +39,11 @@
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.6.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-web": "~0.19.10",
     "react-redux": "9.1.2",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
@@ -49,6 +52,7 @@
     "@babel/runtime": "^7.25.4",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
