--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/core": "^6.4.17",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "2.2.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
@@ -37,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.6.0",
