--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
-        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to access your microphone.", 
+        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to access your microphone.",
         "NSPhotoLibraryUsageDescription": "Allow $(PRODUCT_NAME) to access your photo library.",
         "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to access your camera."
       }
@@ -28,8 +28,10 @@
       "permissions": [
         "android.permission.WRITE_EXTERNAL_STORAGE",
         "android.permission.READ_EXTERNAL_STORAGE",
-        "android.permission.RECORD_AUDIO"
-      ]
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ],
+      "package": "com.phucabadon.aleneEntry"
     },
     "web": {
       "bundler": "metro",
@@ -37,17 +39,27 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      ["expo-router"],
+      [
+        "expo-router"
+      ],
       [
         "expo-av",
         {
-          "microphonePermission":  "Allow \"expo-router\""
+          "microphonePermission": "Allow \"expo-router\""
         }
       ]
     ],
     "experiments": {
       "typedRoutes": true,
       "tsconfigPaths": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "e0f2d61e-a5fc-4c05-be97-1afb0c7027a9"
+      }
     }
   }
 }
