--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-firebase/app": "20.4.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
@@ -39,13 +40,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.19.0",
+    "react-native-gesture-handler": "2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.6.0",
-    "react-native-text-gradient": "^0.1.7",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "9.1.2",
+    "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
   },
