--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/checkbox": "0.5.17",
-    "@react-native-firebase/app": "20.4.0",
+    "@react-native-firebase/app": "^20.4.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/core": "^6.4.17",
     "@react-navigation/native": "^6.1.18",
@@ -28,6 +27,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
     "expo-av": "^14.0.7",
+    "expo-checkbox": "^3.0.0",
     "expo-constants": "~16.0.2",
     "expo-font": "^12.0.9",
     "expo-linear-gradient": "~13.0.2",
