--- a/app.json
+++ b/app.json
@@ -48,7 +48,7 @@
         "android.permission.RECORD_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS"
       ],
-      "package": "com.phucabadon.aleneEntry"
+      "package": "com.phucabadon.alene_entry"
     },
     "web": {
       "bundler": "metro",
