--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/database": "^20.4.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/core": "^6.4.17",
     "@react-navigation/native": "^6.1.18",
