--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "firebasesetup.tsx"  ]
+    "expo-env.d.ts",
+  ]
 }
