fix line page test

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "aleneEntry",
-    "slug": "aleneEntry",
+    "name": "anleneEntry",
+    "slug": "anleneEntry",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
