--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/database": "^20.4.0",
+    "@react-native-firebase/storage": "^20.4.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/core": "^6.4.17",
     "@react-navigation/native": "^6.1.18",
